--- a/index.html
+++ b/index.html
@@ -56,6 +56,12 @@
                 </div>
             </div>
             <div class="form-row">
+                <label class="ui-switch">
+                    <input type="checkbox" id="theme-switch">
+                    <span></span>
+                </label>
+            </div>
+            <div class="form-row">
 
                 <button class="Btn cssbuttons-io-button" id="add-payload-field" type="button">
 
