--- a/index.html
+++ b/index.html
@@ -10,6 +10,14 @@
     <link rel="stylesheet" href="assets/css/styles.css">
 </head>
 <body>
+<div class="theme-toggle-wrapper">
+    <label class="ui-switch">
+        <input type="checkbox" id="theme-switch">
+        <div class="slider">
+            <div class="circle"></div>
+        </div>
+    </label>
+</div>
 <div class="container">
     <div class="form-container">
         <h2>Workflow Dispatcher</h2>
@@ -54,12 +62,6 @@
                     <label class="toggleSwitch" for="log-history"></label>
                     <span>Log workflow dispatch <small>(in local storage)</small></span>
                 </div>
-            </div>
-            <div class="form-row">
-                <label class="ui-switch">
-                    <input type="checkbox" id="theme-switch">
-                    <span></span>
-                </label>
             </div>
             <div class="form-row">
 
