--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
     <span></span>
 </div>
 
-<script src="https://unpkg.com/micromodal/dist/micromodal.min.js"></script>
+<script src="assets/js/micromodal.min.js"></script>
 <script src="dist/main.js" type="module"></script>
 <script>
     document.addEventListener('DOMContentLoaded', function () {
