Add scrolling for payloads and update history layout

--- a/index.html
+++ b/index.html
@@ -88,7 +88,8 @@
     </div>
     <div id="dispatch-history-container">
         <h2>History</h2>
-        <table id="dispatch-history-table">
+        <div id="dispatch-history-table-wrapper">
+            <table id="dispatch-history-table">
             <thead>
             <tr>
                 <th>Owner</th>
@@ -102,7 +103,8 @@
             <tbody>
             <!-- Rows will be dynamically added here -->
             </tbody>
-        </table>
+            </table>
+        </div>
     </div>
 </div>
 
