Remove local GitHub favicon

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Workflow Dispatcher</title>
+    <link rel="icon" type="image/png" href="https://github.githubassets.com/favicons/favicon.png">
     <link rel="stylesheet" href="assets/css/styles.css">
 </head>
 <body>
