Adjust history height and add clear option

--- a/index.html
+++ b/index.html
@@ -89,6 +89,7 @@
     </div>
     <div id="dispatch-history-container">
         <h2>History</h2>
+        <button id="clear-history" class="btn-action" type="button">Clear History</button>
         <div id="dispatch-history-table-wrapper">
             <table id="dispatch-history-table">
             <thead>
