--- a/index.html
+++ b/index.html
@@ -88,8 +88,10 @@
         </form>
     </div>
     <div id="dispatch-history-container">
-        <h2>History</h2>
-        <button id="clear-history" class="btn-action" type="button">Clear History</button>
+        <div class="history-header">
+            <h2>History</h2>
+            <button id="clear-history" class="btn-action small" type="button">Clear</button>
+        </div>
         <div id="dispatch-history-table-wrapper">
             <table id="dispatch-history-table">
             <thead>
@@ -120,6 +122,24 @@
             <main class="modal__content" id="dispatch-details-content"></main>
             <footer class="modal__footer">
                 <button class="button" data-micromodal-close aria-label="Close this dialog window">Close</button>
+            </footer>
+        </div>
+    </div>
+</div>
+
+<div class="modal micromodal-slide" id="confirm-clear-history" aria-hidden="true">
+    <div class="modal__overlay" tabindex="-1" data-micromodal-close>
+        <div class="modal__container" role="dialog" aria-modal="true" aria-labelledby="confirm-clear-history-title">
+            <header class="modal__header">
+                <h2 class="modal__title" id="confirm-clear-history-title">Clear History</h2>
+                <button class="modal__close" aria-label="Close modal" data-micromodal-close>&times;</button>
+            </header>
+            <main class="modal__content">
+                <p>Are you sure you want to clear the dispatch history?</p>
+            </main>
+            <footer class="modal__footer">
+                <button id="confirm-clear-history-btn" class="button">Yes, Clear</button>
+                <button class="button" data-micromodal-close>No</button>
             </footer>
         </div>
     </div>
