Add SEO meta tags

--- a/index.html
+++ b/index.html
@@ -6,6 +6,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Workflow Dispatcher lets you trigger GitHub Actions workflows from the browser with custom inputs and history logging.">
+    <meta name="keywords" content="GitHub Actions, workflow dispatch, GitHub workflow dispatcher, trigger workflow, workflow automation">
+    <meta property="og:title" content="Workflow Dispatcher">
+    <meta property="og:description" content="Trigger GitHub Actions workflows directly from your browser and manage dispatch history.">
+    <meta property="og:url" content="https://workflow-dispatcher.saedyousef.com/">
+    <meta property="og:type" content="website">
+    <meta property="og:image" content="https://github.githubassets.com/favicons/favicon.png">
+    <meta name="twitter:card" content="summary">
     <title>Workflow Dispatcher</title>
     <link rel="icon" type="image/png" href="https://github.githubassets.com/favicons/favicon.png">
     <link rel="stylesheet" href="assets/css/styles.css">
