Add GitHub star badge next to theme toggle

--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
 </head>
 <body>
 <div class="theme-toggle-wrapper">
+    <a class="github-star-badge" href="https://github.com/saedyousef/workflow-dispatcher" target="_blank" aria-label="Star saedyousef/workflow-dispatcher on GitHub">
+        <img src="https://img.shields.io/github/stars/saedyousef/workflow-dispatcher?style=social" alt="GitHub stars">
+    </a>
     <label class="ui-switch">
         <input type="checkbox" id="theme-switch">
         <div class="slider">
