Fix payload list scroll layout

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
             <div class="form-row action-buttons">
                 <button class="btn-action" id="add-payload-field" type="button">Add Payload</button>
             </div>
-            <div id="payload-container" class="form-row">
+            <div id="payload-container">
 
             </div>
 
