Improve responsive UI and add log preference

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
     <div id="dispatch-history-container">
         <div class="history-header">
             <h2>History</h2>
-            <button id="clear-history" class="btn-action small" type="button">Clear</button>
+            <button id="clear-history" type="button">Clear</button>
         </div>
         <div id="dispatch-history-table-wrapper">
             <table id="dispatch-history-table">
